fix nav sizing on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 body {
-    margin: 0;
     font-size: 18px;
     font-family: 'Roboto', sans-serif;
+    margin: auto;
 }
 
 nav {
@@ -33,13 +33,13 @@ nav img {
 
     body {
         font-size: 12px;
+        margin: auto;
     }
 
     nav {
         height: 5em;
-        padding: 0 15% 0 5%;
-        margin: 0;
-        width: 100%;
+        padding: 0 5% 0 5%;
+        width: auto;
     }
     
     h1 {
@@ -50,8 +50,6 @@ nav img {
         height: 5.8em;
         width: 5.8em;
         border-radius: 5.8em;
-        max-height: 150px;
-        max-width: 150px;
     }
     
 }
@@ -65,5 +63,10 @@ nav img {
     
     nav {
         width: 50em;
+    }
+
+    nav img {
+        max-height: 150px;
+        max-width: 150px;
     }
 }
